--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
   "recommendations": ["astro-build.astro-vscode"],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [],
+  "editor.formatOnSave": true,
+  "[astro]":{
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  }
 }
